Fixed name not showing in product card

--- a/style.css
+++ b/style.css
@@ -409,10 +409,10 @@ body {
   flex-direction: column;
 }
 
-.product-card h3 {
+.product-card__name {
   font-size: 16px;
-  font-family: var(--font-regular);
-  font-weight: 600;
+  font-family: var(--font-body);
+  font-weight: 500px;
   margin: 0;
   color: black;
 }
@@ -432,14 +432,10 @@ body {
   text-decoration: underline;
 }
 
-.products-card__name {
-  font-family: var(--font-body);
-}
-
 .product-card__price {
   color: black;
   font-size: 16px;
-  font-family: var(--font-medium);
+  font-family: var(--font-body);
   font-weight: 500;
   margin: 0;
 }
